--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "quiz",
   "version": "0.1.0",
+  "homepage": "http://тест.салехардпомнит.рф/",
   "private": true,
-  "proxy": "http://localhost:5002/",
   "dependencies": {
     "@mui/material": "^5.12.0",
     "@mui/styled-engine-sc": "^5.12.0",
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "serve": "^14.0.1",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
